# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-08-04  Piotr Ożarowski
	* Removing tags function fixed

2007-08-01  Piotr Ożarowski
	* Translation files synchronized with Rosetta
	  + new: Japanese, Russian and Turkish
	  + uptaded: Czech, Spanish, Bulgarian, Greek
	* Polish translation updated

2007-07-31  Michael Jahn
	* FilmTipset plugin added
	* OFDb movie plugin updated

2007-07-21  Piotr Ożarowski
	* Warn about problems with connecting to database (f.e. missing modules)

2007-07-09  Michael Jahn
	* toggle seen/unseen by double-clicking the icon
	* support for different database names with sqlite

2007-07-09  Piotr Ożarowski
	* posters directory problem fixed (thanks to Michael)

2007-07-06  Vasco Nunes
	* PTGate movie plugin updated

2007-07-04  Michael Jahn
	* Kino.de movie plugin updated

2007-07-03  Michael Jahn
	* DVD-Palace and IMDB-de movie plugin updated

---- 0.9.3.1 ---

2007-07-01  Piotr Ożarowski
	* Problem with saving database preferences in config file fixed

---- 0.9.3 ---

2007-06-30  Piotr Ożarowski
	* Use python2.5's sqlite3 module if available (no need to install pysqlite2)
	* Check dependencies at startup
	* Detect old config while restoring data
	* Stopklatka movie plugin updated

2007-06-29  Piotr Ożarowski
	* Added Greek translation (thanks to Ioannis Koniaris)
	* Added Simplified Chinese translation (thanks to kempson)
	* Updated German, Spanish, French and Portuguese Brazilian translations (from Rosetta)
	* Updated Polish translations
	* Do not register mime type in .desktop file

2007-06-29  Vasco Nunes
	* 7arte.net and Cineteka movie plugins updated

2007-06-29  Piotr Ożarowski
	* IMDb movie plugin updated

2007-06-27  Michael Jahn
	* Kino.de movie plugin updated
	* DVD-Palace movie plugin added

2007-06-25  Vasco Nunes
	* Added Danish translation (thanks to Joe Dalton)

2007-06-20  Piotr Ożarowski
	* Filmweb, WP and FDb movie plugins updated

2007-06-20  Michael Jahn