@@ -1,0 +1,10 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" >
+<head>
+<title>Griffith exported data</title>
+<meta http-equiv="REFRESH" content="0;url=./page_1.htm">
+</head>
+<body>
+<h1><a href="./page_1.htm">start</a></h1>
+</body>
+</html>
