@@ -6,6 +6,8 @@ Griffith ChangeLog
 
 2007-08-04  Piotr Ożarowski
 	* Removing tags function fixed
+	* Copy all files from "data" subdirectory to the exported location in HTML export plugin
+	  + add index.htm files to html_table{,s} templates
 
 2007-08-01  Piotr Ożarowski
 	* Translation files synchronized with Rosetta
